# diffusion-assessment

./: .gitignore  cursor_planning_steps_for_deep_learning.md  pyproject.toml
outputs/logs/run001/: config.json
outputs/logs/run002/: config.json
outputs/logs/turbo001/: config.json
outputs/logs/turbo002/: config.json
outputs/logs/turbo003/: config.json
outputs/metrics/turbo002/: clip_overall.csv  clip_per_class.csv  overall.csv  per_class.csv
outputs/metrics/turbo003/: clip_overall.csv  clip_per_class.csv  overall.csv  per_class.csv
src/: gather_data.py
src/configs/: classes.txt  prompts.yaml  run.yaml
src/generate/: model.py  run_generation.py
src/metrics/: clip_score.py  compute_all.py  fid.py  inception_score.py
src/preprocess/: clip.py  dataset.py  fid_is.py
src/sample_image/: find_nn.py
src/utils/: io.py  seed.py  stats.py
