[project]
name = "diffusion-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "Pillow",
    "tqdm",
    "open-clip-torch",
    "pyyaml",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]
